[package]
name             = "dynrunner-protocol-primary-secondary"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Primary↔secondary wire protocol + transport abstraction."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
dynrunner-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[features]
# Enable test-only inspection of routing state from downstream crates'
# integration tests (e.g. dynrunner-transport-channel's
# tests/mesh_partition.rs). Production builds must NOT enable this —
# routing state is an internal invariant, not part of the stable API.
test-utils = []
