[package]
name             = "dynrunner-publish"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Atomic stage→destination publish with cross-FS fallback."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
thiserror = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
