[package]
name             = "dynrunner-pyo3"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "PyO3 bindings — exposes the runner as a Python extension module."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-scheduler-api = { workspace = true }
dynrunner-scheduler = { workspace = true }
dynrunner-manager-local = { workspace = true }
dynrunner-manager-distributed = { workspace = true }
dynrunner-protocol-primary-secondary = { workspace = true }
dynrunner-transport-quic = { workspace = true }
dynrunner-protocol-manager-worker = { workspace = true }
dynrunner-transport-socket = { workspace = true }
dynrunner-transport-channel = { workspace = true }
dynrunner-gateway = { workspace = true }
dynrunner-discovery = { workspace = true }
dynrunner-publish = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pyo3 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
