[package]
name             = "dynrunner-pyo3"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "PyO3 bindings — exposes the runner as a Python extension module."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
# Default for the maturin/cdylib build: the host Python interpreter
# provides the C-API symbols at import time, so the cdylib must NOT
# link against `libpython` (that's what `pyo3/extension-module` does).
# Production wheel builds keep the default features.
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
# Opt-in for `cargo test`: drop `extension-module` (which strips the
# `libpython` link) and add `auto-initialize` so PyO3 brings up a
# CPython interpreter on first `Python::attach`. Run as
# `cargo test -p dynrunner-pyo3 --lib --no-default-features
#   --features test-with-python <pattern>`.
test-with-python = ["pyo3/auto-initialize"]

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-scheduler-api = { workspace = true }
dynrunner-scheduler = { workspace = true }
dynrunner-manager-local = { workspace = true }
dynrunner-manager-distributed = { workspace = true }
dynrunner-protocol-primary-secondary = { workspace = true }
dynrunner-transport-quic = { workspace = true }
dynrunner-transport-tunnel = { workspace = true }
dynrunner-protocol-manager-worker = { workspace = true }
dynrunner-transport-socket = { workspace = true }
dynrunner-transport-channel = { workspace = true }
dynrunner-gateway = { workspace = true }
dynrunner-driver = { workspace = true }
dynrunner-slurm = { workspace = true }
dynrunner-discovery = { workspace = true }
dynrunner-publish = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pyo3 = { workspace = true, features = ["multiple-pymethods"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
# `test-util` exposes `tokio::time::pause`/`advance` +
# `#[tokio::test(start_paused = true)]` so the observer reporter's
# cadence/idle tests are deterministic with no wall-clock race.
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
