[package]
name             = "dynrunner-pyo3"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "PyO3 bindings — exposes the runner as a Python extension module."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
# Default for the maturin/cdylib build: the host Python interpreter
# provides the C-API symbols at import time, so the cdylib must NOT
# link against `libpython` (that's what `pyo3/extension-module` does).
# Production wheel builds keep the default features.
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
# Opt-in for `cargo test`: drop `extension-module` (which strips the
# `libpython` link) and add `auto-initialize` so PyO3 brings up a
# CPython interpreter on first `Python::attach`. That interpreter is a
# single process-global, so these tests MUST run serially — concurrent
# test threads contend on the GIL / interpreter state and make the
# interpreter-driven tests flaky. Run as
# `cargo test -p dynrunner-pyo3 --lib --no-default-features
#   --features test-with-python -- --test-threads=1 <pattern>`.
test-with-python = ["pyo3/auto-initialize"]

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-scheduler-api = { workspace = true }
dynrunner-scheduler = { workspace = true }
dynrunner-manager-local = { workspace = true }
dynrunner-manager-distributed = { workspace = true }
dynrunner-protocol-primary-secondary = { workspace = true }
dynrunner-transport-quic = { workspace = true }
dynrunner-transport-tunnel = { workspace = true }
dynrunner-protocol-manager-worker = { workspace = true }
dynrunner-transport-socket = { workspace = true }
dynrunner-transport-channel = { workspace = true }
dynrunner-gateway = { workspace = true }
dynrunner-driver = { workspace = true }
dynrunner-slurm = { workspace = true }
dynrunner-discovery = { workspace = true }
dynrunner-publish = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pyo3 = { workspace = true, features = ["multiple-pymethods"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
# `libc::atexit` registers the importance-mode debounced-stdio flush so the
# manager run loops' `std::process::exit(137|1)` fatal paths (which run C
# atexit handlers but NOT Rust `Drop`) cannot eat buffered wake lines.
libc = { workspace = true }
async-trait = { workspace = true }
# Local mirror dir for the gateway-mode late-joiner's peer-info fetch
# (also used by tests, which previously held it as a dev-dependency).
tempfile = "3"

[dev-dependencies]
# `test-util` exposes `tokio::time::pause`/`advance` +
# `#[tokio::test(start_paused = true)]` so the observer reporter's
# cadence/idle tests are deterministic with no wall-clock race.
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
