[package]
name             = "dynrunner-scheduler"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Default scheduler implementation."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
dynrunner-scheduler-api = { workspace = true }
dynrunner-core = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
