[package]
name             = "dynrunner-slurm"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Slurm job-manager bindings."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-gateway = { workspace = true }
dynrunner-manager-distributed = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[lints]
workspace = true
