[package]
name             = "dynrunner-slurm"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Slurm job-manager bindings."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-gateway = { workspace = true }
dynrunner-manager-distributed = { workspace = true }
dynrunner-slurm-wrapper-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
# `cli` feature ON for tests only: the renderer↔binary round-trip test
# (`wrapper_script::tests::binary_stub`) parses the stub's emitted args
# back through the same clap parser the wrapper binary uses, asserting
# the `WrapperConfig` reconstructs to what the renderer fed in. The
# non-test build never enables `cli` (the renderer links only
# `to_args()`); this dev-dep line scopes clap to the test binary.
dynrunner-slurm-wrapper-config = { workspace = true, features = ["cli"] }

[lints]
workspace = true
