[package]
name = "dynrunner-transport-channel"
version = "0.1.0"
edition = "2024"

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-protocol-manager-worker = { workspace = true }
dynrunner-protocol-primary-secondary = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
