[package]
name             = "dynrunner-transport-channel"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "In-process channel transport."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-protocol-manager-worker = { workspace = true }
dynrunner-protocol-primary-secondary = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
dynrunner-protocol-primary-secondary = { workspace = true, features = ["test-utils"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
