[package]
name = "db_transport_quic"
version = "0.1.0"
edition = "2024"

[dependencies]
db_comm_api_base = { workspace = true }
db_primary_secondary_comm = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
