[package]
name = "dynrunner-transport-quic"
version = "0.1.0"
edition = "2024"

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-protocol-primary-secondary = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
