[package]
name             = "dynrunner-transport-tunnel"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Tunneled peer transport: a PeerTransport over the primary's per-secondary SSH-tunneled connections, exposing the existing per-secondary writer + inbound channel as a mesh-level PeerTransport so the submitter primary participates as a real peer."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-protocol-primary-secondary = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
