[package]
name             = "dynrunner-worker"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Worker subprocess runtime."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-protocol-manager-worker = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
dynrunner-transport-channel = { workspace = true }

[lints]
workspace = true
