[package]
name = "dynrunner-slurm-wrapper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Musl-static SLURM secondary wrapper: sets up scratch dirs + podman storage, runs the secondary container, logs signal provenance via signalfd, and tears down."

[[bin]]
name = "dynrunner-slurm-wrapper"
path = "src/main.rs"

[dependencies]
dynrunner-slurm-wrapper-config = { workspace = true, features = ["cli"] }
# Shared host-PID reap state-machine + probe/clock traits — the SAME reap
# the out-of-cgroup shutdown-manager uses, so the wrapper carries NO
# private copy of the SIGTERM→grace→SIGKILL logic. Path-dep only (libc +
# std). The wrapper-bin nix build sets `src` to the repo root so this
# sibling path is reachable from the standalone musl-static build.
dynrunner-reap = { path = "../../crates/dynrunner-reap" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "net", "io-util", "time", "sync", "fs"] }
nix = { version = "0.29", features = ["signal", "process", "fs", "hostname", "user"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
